--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "ArgTeam",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/clarifion_logo.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -16,9 +16,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/clarifion_logo.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ruteru.ArgTeam"
     },
     "web": {
       "favicon": "./assets/favicon.png"
