--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-font": "~12.0.5",
+    "expo-splash-screen": "~0.27.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
