--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@svgr/cli": "^8.1.0",
     "@types/react": "~18.2.45",
     "react-native-svg-transformer": "^1.4.0",
     "typescript": "^5.3.3"
