--- a/app.json
+++ b/app.json
@@ -22,6 +22,7 @@
       "package": "com.ruteru.ArgTeam"
     },
     "web": {
+      "bundler": "metro",
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
