--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "argteam",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -25,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/cli": "^0.18.13",
     "@svgr/cli": "^8.1.0",
     "@types/react": "~18.2.45",
     "react-native-svg-transformer": "^1.4.0",
